# Paperdays-SusieP2

./: CMakeLists.txt  mod.json
.github/workflows/: multi-platform.yml
resources/levels/: 0.txt
src/: interface.cpp  objects.cpp  player.cpp  random.cpp
